# fabrica_software_livraria

./: .env_exemplo  .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_compra.py  0004_itenscompra.py  0004_livro_autores.py  0005_itenscompra_preco_item.py  0006_compra_data.py  0007_compra_tipo_pagamento.py
livraria/models/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  compra.py  livro.py  usuario.py
livraria/views/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py  usuario.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_usuario_tipo_usuario.py
utils/: files.py
